# Cadence

./: .dockerignore  .gitignore  DESKTOP.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  start.ps1  start.sh
.githooks/: post-merge
.github/workflows/: desktop-build.yml
agent_one/: __init__.py  api.py  app.py  cli.py  config.py  server.py
agent_one/agents/: orchestrator.py
agent_one/core/: agent.py  config.py  keystore.py  llm.py  trace.py  types.py
agent_one/memory/: __init__.py  backend.py  exporter.py  paths.py  sessions.py  sqlite_store.py  store.py
agent_one/routing/: router.py
agent_one/skills/: loader.py
agent_one/tools/: base.py  code_execution.py  delegate.py  file_ops.py  memory_tools.py  web.py
cadence/: __init__.py  api.py  app.py  cli.py  config.py  server.py
cadence/agents/: collaboration.py  orchestrator.py
cadence/core/: agent.py  chatgpt_oauth.py  checkpoint.py  config.py  keystore.py  llm.py  message_bus.py  multimodal.py  sentinel.py  streaming.py  trace.py  types.py
cadence/knowledge/: __init__.py  graph.py  parsers.py  store.py
cadence/learning/: store.py
cadence/mcp/: __init__.py  bridge.py  client.py  manager.py
cadence/memory/: store.py
cadence/prompts/: __init__.py  evolution.py
cadence/routing/: router.py
cadence/skills/: loader.py
cadence/storage/: chat_store.py
cadence/tools/: base.py  browser.py  checkpoint_tools.py  code_execution.py  database.py  delegate.py  environment.py  file_ops.py  git_ops.py  graph_tools.py  http_client.py  knowledge_tools.py  learning_tools.py  memory_tools.py  message_bus_tools.py  prompt_tools.py  scratchpad.py  text_tools.py  vision.py  web.py
config/: default.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  BackgroundCanvas.tsx  TaskGraph.tsx  api.ts  index.css
scripts/: bundle-python.sh  post-pull.sh
sentinel/: __init__.py  api.py  app.py  cli.py  config.py  server.py
sentinel/agents/: orchestrator.py
sentinel/core/: agent.py  config.py  keystore.py  llm.py  streaming.py  trace.py  types.py
sentinel/knowledge/: graph.py  parsers.py  store.py
sentinel/mcp/: __init__.py  bridge.py  client.py
sentinel/memory/: __init__.py  backend.py  exporter.py  paths.py  sessions.py  sqlite_store.py  store.py
sentinel/prompts/: __init__.py  evolution.py  store.py
sentinel/routing/: router.py
sentinel/tools/: base.py  browser.py  checkpoint_tools.py  code_execution.py  database.py  delegate.py  environment.py  file_ops.py  git_ops.py  graph_tools.py  http_client.py  knowledge_tools.py  learning_tools.py  memory_tools.py  message_bus_tools.py  web.py  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  sidecar.rs
tests/: test_agent_integration.py  test_api_endpoints.py  test_bug_fixes_and_tools.py  test_collaboration.py  test_core.py  test_knowledge.py  test_llm_providers.py  test_mcp.py  test_new_features.py  test_prompt_evolution.py  test_tools_integration.py  test_websocket.py
(+5 files in other folders)
