[project]
name = "agent-one"
version = "0.1.0"
description = "A model-agnostic multi-agent framework with structured planning, tiered memory, and parallel task execution."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "litellm>=1.40.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
agent-one = "agent_one.cli:main"

[tool.setuptools.packages.find]
include = ["agent_one*"]

[tool.ruff]
line-length = 100
target-version = "py311"
