[project]
name = "cadence"
version = "0.1.0"
description = "A model-agnostic multi-agent framework with structured planning, tiered memory, and parallel task execution."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "litellm>=1.40.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "cryptography>=42.0",
    "boto3>=1.34.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "networkx>=3.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
cadence = "cadence.cli:main"
cadence-server = "cadence.server:main"

[tool.setuptools.packages.find]
include = ["cadence*"]

[tool.ruff]
line-length = 100
target-version = "py311"
