[package]
name = "sentinel-desktop"
version = "0.1.0"
description = "Sentinel Desktop — Multi-agent AI framework"
authors = ["Sentinel Contributors"]
edition = "2021"

[lib]
name = "sentinel_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
